2007-02-16  Sven Neumann  <sven@gimp.org>

	* libgimp/gimp.c: let gimp_gamma() return 2.2 and document the
	fact that this is a fixed value and that all pixel data is in the
	sRGB colorspace.

	* plug-ins/common/mng.c: removed check for gimp_gamma() returning 1.0.

2007-02-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: added a button icon and fixed use of
	gtk_vbox_new().

2007-02-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: added hints to the dialog.

2007-02-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: for shaped windows, add an alpha
	channel and erase pixels outside the shape.

2007-02-14  Sven Neumann  <sven@gimp.org>

	* app/actions/plug-in-actions.c
	* app/plug-in/gimppluginprocedure.[ch]: added utility function to
	retrieve the translated blurb of a plug-in procedure. Make sure
	that gettext isn't called with the empty string.

2007-02-14  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c: when multi-line strings end up
	being passed to the statusbar, only show the first line.

2007-02-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tiff.c: added CCITT Group 3 and 4 compression
	schemes to TIFF save plug-in. These modes are selectable for
	indexed image with a b/w colormap only. Fixes bug #162119 with the
	help of Manfred Joerg.

2007-02-13  Raphaël Quinet  <raphael@gimp.org>

	* modules/gimpinputdevicestore.c (gimp_input_device_store_new):
	fix function prototype for when libhal is not available.

2007-02-13  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c: update the progress less often.

2007-02-13  Sven Neumann  <sven@gimp.org>

	* modules/gimpinputdevicestore.[ch]
	* modules/controller_linux_input.c: improved error handling.

2007-02-13  Sven Neumann  <sven@gimp.org>

	* modules/gimpinputdevicestore.c: keep devices sorted alphabetically.

2007-02-13  Michael Natterer  <mitch@gimp.org>

	* modules/gimpinputdevicestore.[ch]: made dynamically loadable