@@ -1,5 +1,13 @@
 2007-02-16  Sven Neumann  <sven@gimp.org>
 
+	* app/display/gimpdisplayshell-close.c: use GTK_STOCK_SAVE as icon
+	for the message dialog.
+
+	* app/actions/data-commands.c (data_delete_cmd_callback): improved
+	delete dialog.
+
+2007-02-16  Sven Neumann  <sven@gimp.org>
+
 	* libgimp/gimp.c: let gimp_gamma() return 2.2 and document the
 	fact that this is a fixed value and that all pixel data is in the
 	sRGB colorspace.
